--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.4-Alpha4 
	- Fixed sending URLs directly to MPD
	- Fixed a problem with automatic downsampling which was referencing
		a now non-existant function 
	- Massive speed improvement on display and sorting of standard
		browse functions
	- Put Ratings back into single song view 
	- Corrected potential consistancy issue with Play Type dropdown
	- Made Access Denied page more friendly, added verbage for
		demo access

--------------------------------------------------------------------------
  v.3.4-Alpha3 11/25/2007 
	- Fixed display problem and lack of link when creating a catalog
	- Inital Version of Democratic play working, minor speed improvements
		to normal tmpplaylist class due to simplification and removal
		of democratic related code
	- Added ability to do batch downloads on the FS failed downloads
		currently will not be garbage collected (Thx COF)
	- Added default mime type if none found (image/jpg) 
	- Changed XML-RPC ACL type to RPC to reflect multiple uses
	- Tweaked catalog add function to improve speed (Thx Karl Hungus)
	- Added XML API borrows authentication style from Last.FM's 
		scrobbling, allows query of Ampache DB, returns XML
		see https://ampache.bountysource.com/wiki/xmlapi
	- Added tweak for Wii so that Flash player opens in current window
		(Thx Dgn)
	- Fixed bug where Ampache would incorrectly search for album art
		when config option was empty (Thx Karl Hungus)
	- Enabling a Localplay Method will now set Allow Localplay to true
	- Fixed all playlist methods, send, send and clear and clear on 
		send now work correctly
	- Added single song view
	- Added Play Select drop down back in
	- Fixed ordering of catalogs