@@ -288,18 +288,6 @@ class tmpPlaylist {
 			"WHERE tmp_playlist.id IS NULL";
 		$db_results = Dba::query($sql);
 
-		// If we don't allow it, don't waste the time
-		if (!Config::get('allow_democratic_playback')) { return true; } 
-	
-		// This deletes data without votes, if it's a voting democratic playlist
-		$sql = "DELETE FROM tmp_playlist_data USING tmp_playlist_data " . 
-			"LEFT JOIN user_vote ON tmp_playlist_data.id=user_vote.object_id " . 
-			"LEFT JOIN tmp_playlist ON tmp_playlist.id=tmp_playlist.tmp_playlist " . 
-			"WHERE user_vote.object_id IS NULL AND tmp_playlist.type = 'vote'";
-		$db_results = Dba::query($sql);
-
-		return true; 
-
 	} // prune_tracks
 
 	/**
