@@ -298,8 +298,10 @@ if ($bytesStreamed > $minBytesStreamed) {
 	/* If this is a voting tmp playlist remove the entry */
 	if ($demo_id) { 
 		$row_id = $democratic->get_uid_from_object_id($song_id,'song'); 
-		debug_event('Democratic','Removing Song Entry from Democratic Playlist','1'); 
-		$democratic->delete_votes($row_id);
+		if ($row_id) {
+			debug_event('Democratic','Removing ' . $song->title . ' from Democratic Playlist','1'); 
+			$democratic->delete_votes($row_id);
+		} 
 	} // if tmp_playlist
 	
 	/* Set the Song as Played if it isn't already */
